# Inori-MoonCat-SoundBox

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: windows.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audio.rs  lib.rs  main.rs  storage.rs
apps/desktop/src/adapters/: platform.ts
apps/desktop/src/components/: Term.tsx  Visuals.tsx
apps/desktop/src/tests/: ChannelTest.tsx  SealTest.tsx  SweepTest.tsx
