[package]
name = "hifi-box"
version = "0.1.0"
description = "Offline guided headphone inspection toolkit"
authors = ["HiFi Box"]
edition = "2021"

[lib]
name = "hifi_box_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.15"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
